Add main divs. Main content, announcements, etc

--- a/index.html
+++ b/index.html
@@ -4,7 +4,15 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Dashboard Project</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <div class="sidebar"></div>
+    <header class="dash-header"></header>
+    <div class="content">
+        / Use loop to generate divs??? /
+        / Divs generated based on....? /
+        / Will include info tile divs, Announcement Div, Trending Div /
+    </div>
   </body>
 </html>
