Remove divs. Add grid.

--- a/index.html
+++ b/index.html
@@ -7,12 +7,10 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <div class="sidebar"></div>
-    <header class="dash-header"></header>
-    <div class="content">
-        / Use loop to generate divs??? /
-        / Divs generated based on....? /
-        / Will include info tile divs, Announcement Div, Trending Div /
+    <div class="main-container">
+        <div class="sidebar">1</div>
+        <div class="header">2</div>
+        <div class="dash">3 </div>
     </div>
   </body>
 </html>
