Update grid. Establish sidebar, header, dash grid and right sidebar. Add border to dash for visual reference

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <div class="main-container">
         <div class="sidebar">1</div>
         <div class="header">2</div>
-        <div class="dash">3 </div>
+        <div class="lower-sidebar">3</div>
+        <div id="dash">4</div>
     </div>
   </body>
 </html>
